increased contrast by changing background color and text color, fixed tooltip issue

--- a/src/App.css
+++ b/src/App.css
@@ -23,4 +23,5 @@ h5 {
   position: relative;
   bottom: 5%;
   margin-top: 3%;
+  font-weight: bold;
 }
