--- a/src/Components/Dashboard/Dashboard.css
+++ b/src/Components/Dashboard/Dashboard.css
@@ -47,6 +47,7 @@
   margin-bottom: 0;
   font-size: 0.8rem;
   font-weight: bold;
+  color: #f7ca18;
 }
 
 .spice_header_favorite {
@@ -55,7 +56,7 @@
   border: none;
   text-align: left;
   padding: 0;
-  background-color: #607196;
+  background-color: #324872;
 }
 
 .dashboard_error {
