--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
 body {
   box-sizing: border-box;
-  background-color: #607196;
+  background-color: #324872;
 }
